# python-playground

./: .pre-commit-config.yaml  README.md  TODO  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/playground/: dummy.py  tree.py
tests/: test_dummy.py
tests/tree/: test_tree_collection.py  test_tree_creation.py  test_tree_iteration.py  test_tree_properties.py
