[metadata]
name = playground
description = Python playground project of m-alorda
author = m-alorda
license = Apache 2.0
license_file = LICENSE

[options]
packages =
    playground
install_requires =
    requests>=2
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=7
    mypy>=1.9
    pytest>=8.1
    pytest-cov>=5
    tox>=4.14

[options.package_data]
playground = py.typed

[flake8]
max-line-length = 100

